@@ -1,3 +1,5 @@
+import org.gradle.internal.os.OperatingSystem
+
 static def isJetBrainsRuntime() {
     return System.getProperty('java.vm.vendor').contains('JetBrains')
 }
@@ -18,7 +20,7 @@ neoForge {
         publish(file)
     }
     // I'd have it on but it just doesn't work :( (fails on some neoforge classes)
-    // validateAccessTransformers = true
+    validateAccessTransformers = true
 
     interfaceInjectionData {
         var file = project.file('injected_interfaces/interfaces.json')
@@ -29,7 +31,7 @@ neoForge {
     interfaceInjectionData = project.files('injected_interfaces/interfaces.json')
 
     addModdingDependenciesTo(sourceSets.test)
-//    addModdingDependenciesTo(sourceSets.extra)
+    addModdingDependenciesTo(sourceSets.extra)
 
     mods {
         // define mod <-> source bindings
@@ -101,6 +103,17 @@ neoForge {
 
             gameDirectory.set(file('run/gametest'))
             systemProperty('neoforge.enabledGameTestNamespaces', project.mod_id)
+            environment('TEST', 'true')
+        }
+
+        gameTestClient {
+            client()
+            sourceSet = sourceSets.test
+            ideName = "Game Tests (Client)"
+
+            gameDirectory.set(file('run/gametest'))
+            systemProperty('neoforge.enabledGameTestNamespaces', project.mod_id)
+            environment('TEST', 'true')
         }
 
         data {
@@ -114,6 +127,26 @@ neoForge {
             programArguments.addAll('--all')
             programArguments.addAll('--output', file('src/generated/resources/').getAbsolutePath())
             programArguments.addAll('--existing', file('src/main/resources/').getAbsolutePath())
+        }
+
+        String renderDocPath = System.getenv("RENDERDOC_LIB")
+        // RenderDoc cannot run on macos so we don't add the config for mac users
+        if(renderDocPath != null && !OperatingSystem.current().isMacOsX()) {
+            create("renderDocClient") {
+                client()
+                sourceSet = sourceSets.client
+                ideName = "Clean Client + RenderDoc (Requires Java 21)"
+
+                programArguments.addAll('--username', 'screret', '--uuid', '1184eb79-5831-4f7d-b8f4-3a46fccf7a1d')
+
+                systemProperty("neoforge.rendernurse.renderdoc.library", renderDocPath)
+                if(OperatingSystem.current().isLinux()) {
+                    environment("LD_PRELOAD", renderDocPath)
+                }
+                // parses out the render nurse jar path and adds as `-javaagent:${path}`
+                jvmArguments.addAll(project.configurations.renderNurseCfg.incoming.files.elements.map { it.collect { "-javaagent:${it.asFile.absolutePath}" }})
+                jvmArguments.addAll("--enable-preview", "--enable-native-access=ALL-UNNAMED")
+            }
         }
 
         // applies to all the run configs above
